test.h

typedef unsigned int __socklen_t;
typedef __socklen_t socklen_t;
typedef unsigned short sa_family_t;
typedef uint16_t in_port_t;
typedef uint32_t in_addr_t;
typedef struct in_addr {
  in_addr_t s_addr;
} in_addr;
typedef struct sockaddr_in {
  sa_family_t sin_family;
  in_port_t sin_port;
  struct in_addr sin_addr;
  unsigned char sin_zero[8];
} sockaddr_in;
typedef struct in6_addr {
  union in6_addr__bindgen_ty_1 __in6_u;
} in6_addr;
typedef struct sockaddr_in6 {
  sa_family_t sin6_family;
  in_port_t sin6_port;
  uint32_t sin6_flowinfo;
  struct in6_addr sin6_addr;
  uint32_t sin6_scope_id;
} sockaddr_in6;
typedef struct _IO_marker {
  uint8_t _unused[0];
} _IO_marker;
typedef long __off_t;
typedef void _IO_lock_t;
typedef long __off64_t;
typedef struct _IO_codecvt {
  uint8_t _unused[0];
} _IO_codecvt;
typedef struct _IO_wide_data {
  uint8_t _unused[0];
} _IO_wide_data;
typedef struct _IO_FILE {
  int _flags;
  char *_IO_read_ptr;
  char *_IO_read_end;
  char *_IO_read_base;
  char *_IO_write_base;
  char *_IO_write_ptr;
  char *_IO_write_end;
  char *_IO_buf_base;
  char *_IO_buf_end;
  char *_IO_save_base;
  char *_IO_backup_base;
  char *_IO_save_end;
  struct _IO_marker *_markers;
  struct _IO_FILE *_chain;
  int _fileno;
  int _flags2;
  __off_t _old_offset;
  unsigned short _cur_column;
  signed char _vtable_offset;
  char _shortbuf[1];
  _IO_lock_t *_lock;
  __off64_t _offset;
  struct _IO_codecvt *_codecvt;
  struct _IO_wide_data *_wide_data;
  struct _IO_FILE *_freeres_list;
  void *_freeres_buf;
  struct _IO_FILE **_prevchain;
  int _mode;
  char _unused2[20];
} _IO_FILE;
typedef struct _IO_FILE FILE;
typedef union __mbstate_t__bindgen_ty_1 {
  unsigned int __wch;
  char __wchb[4];
} __mbstate_t__bindgen_ty_1;
typedef struct __mbstate_t {
  int __count;
  union __mbstate_t__bindgen_ty_1 __value;
} __mbstate_t;
typedef struct _G_fpos_t {
  __off_t __pos;
  struct __mbstate_t __state;
} _G_fpos_t;
typedef struct _G_fpos_t __fpos_t;
extern uint32_t ntohl(uint32_t __netlong);
extern uint16_t ntohs(uint16_t __netshort);
extern uint32_t htonl(uint32_t __hostlong);
extern uint16_t htons(uint16_t __hostshort);
extern int bindresvport(int __sockfd, struct sockaddr_in *__sock_in);
extern int bindresvport6(int __sockfd, struct sockaddr_in6 *__sock_in);
extern in_addr_t inet_addr(const char *__cp);
extern in_addr_t inet_lnaof(struct in_addr __in);
extern struct in_addr inet_makeaddr(in_addr_t __net, in_addr_t __host);
extern in_addr_t inet_netof(struct in_addr __in);
extern in_addr_t inet_network(const char *__cp);
extern char *inet_ntoa(struct in_addr __in);
extern int inet_pton(int __af, const char *__cp, void *__buf);
extern const char *inet_ntop(int __af, const void *__cp, char *__buf,
                             socklen_t __len);
extern int inet_aton(const char *__cp, struct in_addr *__inp);
extern char *inet_neta(in_addr_t __net, char *__buf, uintptr_t __len);
extern char *inet_net_ntop(int __af, const void *__cp, int __bits, char *__buf,
                           uintptr_t __len);
extern int inet_net_pton(int __af, const char *__cp, void *__buf,
                         uintptr_t __len);
extern unsigned int inet_nsap_addr(const char *__cp, unsigned char *__buf,
                                   int __len);
extern char *inet_nsap_ntoa(int __len, const unsigned char *__cp, char *__buf);